Fix SigninPage/SigninForm styling so that button elements aren't squeezed upward, overlapping the input elements, when browser window's height is shortened

--- a/src/components/SigninPage/style.scss
+++ b/src/components/SigninPage/style.scss
@@ -2,9 +2,7 @@
 @import '../../styles/_colors.scss';
 
 .signin-page {
-  min-height: 100vh;
   min-width: 100vw;
-  height: 100%;
   width: 100%;
   padding: 0;
 
@@ -149,12 +147,12 @@
 
   .container-fluid {
     min-height: 100vh;
-    height: 100%;
+    //height: 100%;
+    padding: 0;
 
     .row {
       min-height: 100vh;
       width: 100%;
-      height: 100vh;
       margin: 0;
 
       .image-container {
@@ -170,24 +168,20 @@
 
       .page-content {
         width: 100%;
-        height: 100%;
         padding: 0 1rem;
 
-
         .signin-form {
-          min-height: 80vh;
           height: 100%;
           max-width: 100%;
-          padding: 0 3rem;
+          padding: 4rem 3rem 0;
 
           display: flex;
           flex-direction: column;
-          justify-content: center;
           align-items: center;
 
           .signin-header {
-            height: 25%;
-            margin: -2rem auto 1rem;
+            width: 100%;
+            margin: 0 auto 2rem;
 
             display: flex;
             flex-direction: column;
@@ -195,10 +189,14 @@
             align-items: center;
 
             text-align: center;
+
+            > h3 {
+              margin-bottom: 1rem;
+            }
           }
 
           form {
-            height: 60vh;
+            min-height: 400px;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -208,10 +206,7 @@
               width: 100%;
               margin-bottom: .5rem;
 
-
-
               input {
-
                 height: 100%;
                 width: 100%;
                 padding: 1rem;
@@ -239,20 +234,12 @@
             }
 
             .buttons-wrapper {
-              top: 0;
               display: flex;
               flex-direction: column;
-              justify-content: space-between;
-
-              height: 35%;
 
               button {
-
                 padding: .75rem 1.5rem;
-
-                //height: 2.5rem;
-                //width: 6rem;
-
+                margin-bottom: 1rem;
                 border: 1px solid $green;
                 border-radius: 5px;
                 background-color: $white;
